# blog-api

./: Dockerfile  pyproject.toml
backend/accounts/: factories.py  models.py  permissions.py  serializers.py  tests.py  views.py
backend/accounts/management/commands/: populate_users.py
backend/accounts/migrations/: 0001_initial.py
backend/blogs/: factories.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/blogs/management/commands/: populate_blogs.py  populate_categories.py  populate_comment.py  populate_database.py
backend/blogs/migrations/: 0001_initial.py  0002_alter_blog_category.py  0003_alter_blog_slug.py  0004_comment_delete_blogcomment.py  0005_reply.py  0006_like.py  0007_reaction.py  0008_rename_user_like_author_rename_user_reaction_author_and_more.py  0009_alter_reaction_reaction_type.py
backend/blogs/tests/: test_blog.py  test_category.py  test_comment.py  test_like.py  test_reaction.py  test_reply.py  test_tag.py
backend/config/: settings.py  urls.py
